Make memory session a pure lifetime abstraction