@@ -62,11 +62,11 @@ import java.util.function.BiFunction;
  * The factory methods {@link #libraryLookup(String, MemorySession)} and {@link #libraryLookup(Path, MemorySession)}
  * create a symbol lookup for a library known to the operating system. The library is specified by either its name or a path.
  * The library is loaded if not already loaded. The symbol lookup, which is known as a <em>library lookup</em>, is associated
- * with a {@linkplain  MemorySession memory session}; when the session is {@linkplain MemorySession#close() closed}, the library is unloaded:
+ * with a {@linkplain  MemorySession memory session}; when the session is closed, the library is unloaded:
  *
  * {@snippet lang = java:
- * try (MemorySession session = MemorySession.openConfined()) {
- *     SymbolLookup libGL = SymbolLookup.libraryLookup("libGL.so"); // libGL.so loaded here
+ * try (Arena arena = Arena.openConfined()) {
+ *     SymbolLookup libGL = SymbolLookup.libraryLookup("libGL.so", arena.session()); // libGL.so loaded here
  *     MemorySegment glGetString = libGL.find("glGetString").orElseThrow();
  *     ...
  * } //  libGL.so unloaded here
@@ -139,8 +139,8 @@ public interface SymbolLookup {
      * <p>
      * Libraries associated with a class loader are unloaded when the class loader becomes
      * <a href="../../../java/lang/ref/package.html#reachability">unreachable</a>. The symbol lookup
-     * returned by this method is backed by a {@linkplain MemorySession#asNonCloseable() non-closeable}, shared memory
-     * session which keeps the caller's class loader reachable. Therefore, libraries associated with the caller's class
+     * returned by this method is backed by a shared memory session that is always alive and which keeps the caller's
+     * class loader reachable. Therefore, libraries associated with the caller's class
      * loader are kept loaded (and their symbols available) as long as a loader lookup for that class loader is reachable.
      * <p>
      * In cases where this method is called from a context where there is no caller frame on the stack
@@ -174,8 +174,7 @@ public interface SymbolLookup {
 
     /**
      * Loads a library with the given name (if not already loaded) and creates a symbol lookup for symbols in that library.
-     * The library will be unloaded when the provided memory session is {@linkplain MemorySession#close() closed},
-     * if no other library lookup is still using it.
+     * The library will be unloaded when the provided memory session is closed, if no other library lookup is still using it.
      * @implNote The process of resolving a library name is OS-specific. For instance, in a POSIX-compliant OS,
      * the library name is resolved according to the specification of the {@code dlopen} function for that OS.
      * In Windows, the library name is resolved according to the specification of the {@code LoadLibrary} function.
@@ -201,7 +200,7 @@ public interface SymbolLookup {
 
     /**
      * Loads a library from the given path (if not already loaded) and creates a symbol lookup for symbols
-     * in that library. The library will be unloaded when the provided memory session is {@linkplain MemorySession#close() closed},
+     * in that library. The library will be unloaded when the provided memory session is closed,
      * if no other library lookup is still using it.
      * <p>
      * This method is <a href="package-summary.html#restricted"><em>restricted</em></a>.
