@@ -23,6 +23,7 @@
 
 import org.testng.annotations.Test;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySession;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
@@ -50,12 +51,12 @@ public class LibraryLookupTest {
 
     @Test
     void testLoadLibraryConfined() {
-        try (MemorySession session0 = MemorySession.openConfined()) {
-            callFunc(loadLibrary(session0));
-            try (MemorySession session1 = MemorySession.openConfined()) {
-                callFunc(loadLibrary(session1));
-                try (MemorySession session2 = MemorySession.openConfined()) {
-                    callFunc(loadLibrary(session2));
+        try (Arena arena0 = Arena.openConfined()) {
+            callFunc(loadLibrary(arena0.session()));
+            try (Arena arena1 = Arena.openConfined()) {
+                callFunc(loadLibrary(arena1.session()));
+                try (Arena arena2 = Arena.openConfined()) {
+                    callFunc(loadLibrary(arena2.session()));
                 }
             }
         }
@@ -64,8 +65,8 @@ public class LibraryLookupTest {
     @Test(expectedExceptions = IllegalStateException.class)
     void testLoadLibraryConfinedClosed() {
         MemorySegment addr;
-        try (MemorySession session = MemorySession.openConfined()) {
-            addr = loadLibrary(session);
+        try (Arena arena = Arena.openConfined()) {
+            addr = loadLibrary(arena.session());
         }
         callFunc(addr);
     }
@@ -115,8 +116,8 @@ public class LibraryLookupTest {
         @Override
         public void run() {
             for (int i = 0 ; i < ITERATIONS ; i++) {
-                try (MemorySession session = MemorySession.openConfined()) {
-                    callFunc(loadLibrary(session));
+                try (Arena arena = Arena.openConfined()) {
+                    callFunc(loadLibrary(arena.session()));
                 }
             }
         }
@@ -124,15 +125,15 @@ public class LibraryLookupTest {
 
     @Test
     void testLoadLibrarySharedClosed() throws Throwable {
-        MemorySession session = MemorySession.openShared();
-        MemorySegment addr = loadLibrary(session);
+        Arena arena = Arena.openShared();
+        MemorySegment addr = loadLibrary(arena.session());
         ExecutorService accessExecutor = Executors.newCachedThreadPool();
         for (int i = 0; i < NUM_ACCESSORS ; i++) {
             accessExecutor.execute(new LibraryAccess(addr));
         }
         while (true) {
             try {
-                session.close();
+                arena.close();
                 break;
             } catch (IllegalStateException ex) {
                 // wait for addressable parameter to be released
