@@ -27,11 +27,11 @@
  * @run testng TestMemoryAlignment
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.GroupLayout;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemoryLayout.PathElement;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SequenceLayout;
 import java.lang.foreign.ValueLayout;
 import java.lang.invoke.VarHandle;
@@ -52,8 +52,8 @@ public class TestMemoryAlignment {
         ValueLayout aligned = layout.withBitAlignment(align);
         assertEquals(aligned.bitAlignment(), align); //unreasonable alignment here, to make sure access throws
         VarHandle vh = aligned.varHandle();
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(aligned);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(aligned, arena.session());;
             vh.set(segment, -42);
             int val = (int)vh.get(segment);
             assertEquals(val, -42);
@@ -70,8 +70,8 @@ public class TestMemoryAlignment {
         MemoryLayout alignedGroup = MemoryLayout.structLayout(MemoryLayout.paddingLayout(8), aligned);
         assertEquals(alignedGroup.bitAlignment(), align);
         VarHandle vh = aligned.varHandle();
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(alignedGroup);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(alignedGroup, arena.session());;
             vh.set(segment.asSlice(1L), -42);
             assertEquals(align, 8); //this is the only case where access is aligned
         } catch (IllegalArgumentException ex) {
@@ -97,8 +97,8 @@ public class TestMemoryAlignment {
         SequenceLayout layout = MemoryLayout.sequenceLayout(5, ValueLayout.JAVA_INT.withOrder(ByteOrder.BIG_ENDIAN).withBitAlignment(align));
         try {
             VarHandle vh = layout.varHandle(PathElement.sequenceElement());
-            try (MemorySession session = MemorySession.openConfined()) {
-                MemorySegment segment = session.allocate(layout);
+            try (Arena arena = Arena.openConfined()) {
+                MemorySegment segment = MemorySegment.allocateNative(layout, arena.session());;
                 for (long i = 0 ; i < 5 ; i++) {
                     vh.set(segment, i, -42);
                 }
@@ -121,8 +121,8 @@ public class TestMemoryAlignment {
         VarHandle vh_c = g.varHandle(PathElement.groupElement("a"));
         VarHandle vh_s = g.varHandle(PathElement.groupElement("b"));
         VarHandle vh_i = g.varHandle(PathElement.groupElement("c"));
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(g);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(g, arena.session());;
             vh_c.set(segment, Byte.MIN_VALUE);
             assertEquals(vh_c.get(segment), Byte.MIN_VALUE);
             vh_s.set(segment, Short.MIN_VALUE);
