@@ -27,6 +27,7 @@
  * @run testng TestMismatch
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySession;
 import java.util.ArrayList;
 import java.util.List;
@@ -171,8 +172,8 @@ public class TestMismatch {
     public void testEmpty() {
         var s1 = MemorySegment.ofArray(new byte[0]);
         assertEquals(s1.mismatch(s1), -1);
-        try (MemorySession session = MemorySession.openConfined()) {
-            var nativeSegment = session.allocate(4, 4);
+        try (Arena arena = Arena.openConfined()) {
+            var nativeSegment = MemorySegment.allocateNative(4, 4, arena.session());;
             var s2 = nativeSegment.asSlice(0, 0);
             assertEquals(s1.mismatch(s2), -1);
             assertEquals(s2.mismatch(s1), -1);
@@ -183,9 +184,9 @@ public class TestMismatch {
     public void testLarge() {
         // skip if not on 64 bits
         if (ValueLayout.ADDRESS.byteSize() > 32) {
-            try (MemorySession session = MemorySession.openConfined()) {
-                var s1 = session.allocate((long) Integer.MAX_VALUE + 10L, 8);
-                var s2 = session.allocate((long) Integer.MAX_VALUE + 10L, 8);
+            try (Arena arena = Arena.openConfined()) {
+                var s1 = MemorySegment.allocateNative((long) Integer.MAX_VALUE + 10L, 8, arena.session());;
+                var s2 = MemorySegment.allocateNative((long) Integer.MAX_VALUE + 10L, 8, arena.session());;
                 assertEquals(s1.mismatch(s1), -1);
                 assertEquals(s1.mismatch(s2), -1);
                 assertEquals(s2.mismatch(s1), -1);
@@ -227,9 +228,9 @@ public class TestMismatch {
     @Test
     public void testClosed() {
         MemorySegment s1, s2;
-        try (MemorySession session = MemorySession.openConfined()) {
-            s1 = session.allocate(4, 1);
-            s2 = session.allocate(4, 1);
+        try (Arena arena = Arena.openConfined()) {
+            s1 = MemorySegment.allocateNative(4, 1, arena.session());;
+            s2 = MemorySegment.allocateNative(4, 1, arena.session());;
         }
         assertThrows(ISE, () -> s1.mismatch(s1));
         assertThrows(ISE, () -> s1.mismatch(s2));
@@ -238,8 +239,8 @@ public class TestMismatch {
 
     @Test
     public void testThreadAccess() throws Exception {
-        try (MemorySession session = MemorySession.openConfined()) {
-            var segment = session.allocate(4, 1);
+        try (Arena arena = Arena.openConfined()) {
+            var segment = MemorySegment.allocateNative(4, 1, arena.session());;
             {
                 AtomicReference<RuntimeException> exception = new AtomicReference<>();
                 Runnable action = () -> {
@@ -280,7 +281,7 @@ public class TestMismatch {
     }
 
     enum SegmentKind {
-        NATIVE(i -> MemorySegment.allocateNative(i, MemorySession.openImplicit())),
+        NATIVE(i -> MemorySegment.allocateNative(i, MemorySession.implicit())),
         ARRAY(i -> MemorySegment.ofArray(new byte[i]));
 
         final IntFunction<MemorySegment> segmentFactory;
