@@ -29,6 +29,7 @@
  * @run testng/othervm --enable-native-access=ALL-UNNAMED TestNative
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySession;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemoryLayout;
@@ -144,8 +145,8 @@ public class TestNative extends NativeTestHelper {
 
     @Test(dataProvider="nativeAccessOps")
     public void testNativeAccess(Consumer<MemorySegment> checker, Consumer<MemorySegment> initializer, SequenceLayout seq) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(seq);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(seq, arena.session());;
             initializer.accept(segment);
             checker.accept(segment);
         }
@@ -154,8 +155,8 @@ public class TestNative extends NativeTestHelper {
     @Test(dataProvider="buffers")
     public void testNativeCapacity(Function<ByteBuffer, Buffer> bufferFunction, int elemSize) {
         int capacity = (int)doubles.byteSize();
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(doubles);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(doubles, arena.session());;
             ByteBuffer bb = segment.asByteBuffer();
             Buffer buf = bufferFunction.apply(bb);
             int expected = capacity / elemSize;
@@ -167,9 +168,9 @@ public class TestNative extends NativeTestHelper {
     @Test
     public void testDefaultAccessModes() {
         MemorySegment addr = allocateMemory(12);
-        try (MemorySession session = MemorySession.openConfined()) {
-            session.addCloseAction(() -> freeMemory(addr));
-            MemorySegment mallocSegment = MemorySegment.ofAddress(addr.address(), 12, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment mallocSegment = MemorySegment.ofAddress(addr.address(), 12,
+                    arena.session(), () -> freeMemory(addr));
             assertFalse(mallocSegment.isReadOnly());
         }
     }
@@ -178,9 +179,9 @@ public class TestNative extends NativeTestHelper {
     public void testMallocSegment() {
         MemorySegment addr = allocateMemory(12);
         MemorySegment mallocSegment = null;
-        try (MemorySession session = MemorySession.openConfined()) {
-            session.addCloseAction(() -> freeMemory(addr));
-            mallocSegment = MemorySegment.ofAddress(addr.address(), 12, session);
+        try (Arena arena = Arena.openConfined()) {
+            mallocSegment = MemorySegment.ofAddress(addr.address(), 12,
+                    arena.session(), () -> freeMemory(addr));
             assertEquals(mallocSegment.byteSize(), 12);
             //free here
         }
@@ -197,8 +198,8 @@ public class TestNative extends NativeTestHelper {
 
     @Test(expectedExceptions = IllegalArgumentException.class)
     public void testBadResize() {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment segment = session.allocate(4, 1);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment segment = MemorySegment.allocateNative(4, 1, arena.session());;
             MemorySegment.ofAddress(segment.address(), -1, MemorySession.global());
         }
     }
