@@ -27,6 +27,7 @@
  * @run testng TestSpliterator
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySession;
@@ -42,6 +43,7 @@ import java.util.concurrent.atomic.AtomicLong;
 import java.util.stream.LongStream;
 
 import java.lang.foreign.ValueLayout;
+
 import org.testng.annotations.*;
 
 import static org.testng.Assert.*;
@@ -57,8 +59,8 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(size, ValueLayout.JAVA_INT);
 
         //setup
-        try (MemorySession session = MemorySession.openShared()) {
-            MemorySegment segment = session.allocate(layout);
+        try (Arena arena = Arena.openShared()) {
+            MemorySegment segment = MemorySegment.allocateNative(layout, arena.session());;
             for (int i = 0; i < layout.elementCount(); i++) {
                 INT_HANDLE.set(segment, (long) i, i);
             }
@@ -84,7 +86,7 @@ public class TestSpliterator {
         SequenceLayout layout = MemoryLayout.sequenceLayout(1024, ValueLayout.JAVA_INT);
 
         //setup
-        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.openImplicit());
+        MemorySegment segment = MemorySegment.allocateNative(layout, MemorySession.implicit());
         for (int i = 0; i < layout.elementCount(); i++) {
             INT_HANDLE.set(segment, (long) i, i);
         }
