@@ -46,6 +46,7 @@
  *   VarHandleTestExact
  */
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
 import java.lang.foreign.MemorySession;
@@ -170,8 +171,8 @@ public class VarHandleTestExact {
     @Test(dataProvider = "dataSetMemorySegment")
     public void testExactSegmentSet(Class<?> carrier, Object testValue, SetSegmentX setter) {
         VarHandle vh = MethodHandles.memorySegmentViewVarHandle(MemoryLayout.valueLayout(carrier, ByteOrder.nativeOrder()));
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment seg = session.allocate(8);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment seg = arena.allocate(8);
             doTest(vh,
                 tvh -> tvh.set(seg, 0L, testValue),
                 tvh -> setter.set(tvh, seg, 0L, testValue),
