@@ -25,6 +25,7 @@
 
 package org.openjdk.bench.java.lang.foreign;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemorySegment;
@@ -39,7 +40,6 @@ import org.openjdk.jmh.annotations.OutputTimeUnit;
 import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.Warmup;
 
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.SymbolLookup;
 import java.lang.invoke.MethodHandle;
 import java.util.concurrent.TimeUnit;
@@ -52,8 +52,8 @@ import java.util.concurrent.TimeUnit;
 @Fork(value = 3, jvmArgsAppend = { "--enable-native-access=ALL-UNNAMED", "--enable-preview" })
 public class PointerInvoke extends CLayouts {
 
-    MemorySession session = MemorySession.openConfined();
-    MemorySegment segment = session.allocate(100);
+    Arena arena = Arena.openConfined();
+    MemorySegment segment = MemorySegment.allocateNative(100, arena.session());
 
     static {
         System.loadLibrary("Ptr");
@@ -72,7 +72,7 @@ public class PointerInvoke extends CLayouts {
 
     @TearDown
     public void tearDown() {
-        session.close();
+        arena.close();
     }
 
     @Benchmark
@@ -87,7 +87,7 @@ public class PointerInvoke extends CLayouts {
 
     @Benchmark
     public int panama_call_as_new_segment() throws Throwable {
-        MemorySegment newSegment = MemorySegment.ofAddress(segment.address(), 100, session);
+        MemorySegment newSegment = MemorySegment.ofAddress(segment.address(), 100, arena.session());
         return (int)F_PTR.invokeExact(newSegment);
     }
 }
