@@ -35,8 +35,8 @@ import org.openjdk.jmh.annotations.State;
 import org.openjdk.jmh.annotations.TearDown;
 import org.openjdk.jmh.annotations.Warmup;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.ValueLayout;
 import java.util.concurrent.TimeUnit;
 
@@ -48,11 +48,11 @@ import java.util.concurrent.TimeUnit;
 @State(Scope.Benchmark)
 public class PointerBench {
 
-    final MemorySession session = MemorySession.openConfined();
+    final Arena arena = Arena.openConfined();
     static final int ELEM_SIZE = 1_000_000;
-    Pointer<Integer> intPointer = Pointer.allocate(NativeType.C_INT, ELEM_SIZE, session);
-    Pointer<Pointer<Integer>> intPointerPointer = Pointer.allocate(NativeType.C_INT_PTR, ELEM_SIZE, session);
-    Pointer<Point> pointPointer = Pointer.allocate(Point.TYPE, ELEM_SIZE, session);
+    Pointer<Integer> intPointer = Pointer.allocate(NativeType.C_INT, ELEM_SIZE, arena);
+    Pointer<Pointer<Integer>> intPointerPointer = Pointer.allocate(NativeType.C_INT_PTR, ELEM_SIZE, arena);
+    Pointer<Point> pointPointer = Pointer.allocate(Point.TYPE, ELEM_SIZE, arena);
     MemorySegment intSegment = intPointer.segment();
     MemorySegment intPointerSegment = intPointerPointer.segment();
     MemorySegment pointSegment = pointPointer.segment();
@@ -71,7 +71,7 @@ public class PointerBench {
 
     @TearDown
     public void teardown() {
-        session.close();
+        arena.close();
     }
 
     @Benchmark
