@@ -22,11 +22,12 @@
  */
 package org.openjdk.bench.java.lang.foreign.points.support;
 
+import java.lang.foreign.Arena;
 import java.lang.foreign.Linker;
 import java.lang.foreign.FunctionDescriptor;
 import java.lang.foreign.MemoryLayout;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+
 import org.openjdk.bench.java.lang.foreign.CLayouts;
 
 import java.lang.foreign.SymbolLookup;
@@ -61,10 +62,12 @@ public class PanamaPoint extends CLayouts implements AutoCloseable {
         );
     }
 
+    Arena arena;
     private final MemorySegment segment;
 
     public PanamaPoint(int x, int y) {
-        this.segment = MemorySession.openConfined().allocate(LAYOUT);
+        this.arena = Arena.openConfined();
+        this.segment = MemorySegment.allocateNative(LAYOUT, arena.session());
         setX(x);
         setY(y);
     }
@@ -103,6 +106,6 @@ public class PanamaPoint extends CLayouts implements AutoCloseable {
 
     @Override
     public void close() {
-        segment.session().close();
+        arena.close();
     }
 }
